Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-134473

Font rendering of Qt Creators Text Editor is broken

    XMLWordPrintable

Details

    • Windows
    • 54555755f (6.9.0), 81bbbc3fc (dev), d7127c02f (6.9)

    Description

      The background of each individual character is black and the character is white.

      Screenshot of the 6.9 based snapshot:

      Screenshot of the 6.8 based snapshot:

      Attachments

        1. image-2025-03-06-13-35-29-831.png
          13 kB
          David Schulz
        2. image-2025-03-06-13-37-12-801.png
          13 kB
          David Schulz
        3. image-2025-03-07-08-32-37-520.png
          9 kB
          David Schulz
        For Gerrit Dashboard: QTBUG-134473
        # Subject Branch Project Status CR V

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            davschul David Schulz
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes